force-app/main/default/objects/MaskSObjectSettings__mdt/MaskSObjectSettings__mdt.object-meta.xml
<CustomObject>
    <description>Configure Mask SObject Framework&apos;s options</description>
    <label>Mask SObject Settings</label>
    <pluralLabel>Mask SObject Settings</pluralLabel>
</CustomObject>