force-app/main/default/objects/MaskSObjectSettings__mdt/fields/AllowExecutionOnProd__c.field-meta.xml
<CustomField>
    <fullName>AllowExecutionOnProd__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow Mask SObject Framework&apos;s execution on PROD env.</description>
    <inlineHelpText>To allow execution on production, you must check this option.</inlineHelpText>
    <label>Allow Execution On Prod</label>
    <type>Checkbox</type>
</CustomField>