force-app/main/default/objects/MaskSObjectSettings__mdt/fields/DisableLogError__c.field-meta.xml
<CustomField>
    <fullName>DisableLogError__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Can enable of disable MaskSObjectError records creation</description>
    <inlineHelpText>If checked, no MaskSObjectError__c record will be created.</inlineHelpText>
    <label>Disable log error</label>
    <type>Checkbox</type>
</CustomField>