force-app/main/default/objects/MaskSObjectSettings__mdt/fields/MaskEmailDomain__c.field-meta.xml
<CustomField>
    <fullName>MaskEmailDomain__c</fullName>
    <defaultValue>false</defaultValue>
    <description>By default, we don&apos;t mask email domain, to enable this feature check this option.</description>
    <inlineHelpText>To enable domain masking on emails, check this option.</inlineHelpText>
    <label>Mask Email Domain</label>
    <type>Checkbox</type>
</CustomField>