force-app/main/default/objects/MaskSObjectSettings__mdt/fields/NumberOfDigitToPreserveInPhones__c.field-meta.xml
<CustomField>
    <fullName>NumberOfDigitToPreserveInPhones__c</fullName>
    <defaultValue>2</defaultValue>
    <description>By default we preserve the two first digits when masking phones.</description>
    <inlineHelpText>Number of first digits to preserve on phone fields.</inlineHelpText>
    <label>Number of digit to preserve in Phones</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>