force-app/main/default/objects/MaskSObjectSettings__mdt/fields/ObfuscateCharacterReplacement__c.field-meta.xml
<CustomField>
    <fullName>ObfuscateCharacterReplacement__c</fullName>
    <defaultValue>&quot;X&quot;</defaultValue>
    <description>The character used to replace the Obfuscated characters</description>
    <label>Obfuscate character replacement</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>