force-app/main/default/objects/MaskSObjectSettings__mdt/fields/ObfuscatedCharacters__c.field-meta.xml
<CustomField>
    <fullName>ObfuscatedCharacters__c</fullName>
    <defaultValue>&quot;a, e, i, o, u, 1, 2, 5, 6&quot;</defaultValue>
    <description>List the characters to obfuscate</description>
    <inlineHelpText>List of char separated by coma.</inlineHelpText>
    <label>Characeters to obfuscate</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>