force-app/main/default/objects/MaskSObjectSettings__mdt/fields/ObfuscateDigitReplacement__c.field-meta.xml
<CustomField>
    <fullName>ObfuscateDigitReplacement__c</fullName>
    <defaultValue>&quot;0&quot;</defaultValue>
    <description>The number used to replace the numeric Obfuscated characters</description>
    <label>Obfuscate numbers replacement</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>