force-app/main/default/objects/MaskSObjectSettings__mdt/fields/UseBulkAPI__c.field-meta.xml
<CustomField>
    <fullName>UseBulkAPI__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable this checkbox to use the Bulk API to perform the updates.</description>
    <inlineHelpText>Enable this checkbox to use the Bulk API to perform the updates.</inlineHelpText>
    <label>Use Bulk API</label>
    <type>Checkbox</type>
</CustomField>