force-app/main/default/objects/MaskSObjectSettings__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>DeveloperName</columns>
    <columns>AllowExecutionOnProd__c</columns>
    <columns>DisableLogError__c</columns>
    <columns>NumberOfDigitToPreserveInPhones__c</columns>
    <columns>ObfuscateCharacterReplacement__c</columns>
    <columns>ObfuscateDigitReplacement__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>